# aa

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: debezium_postgres_connect.json  redis_connect.json
scripts/: add_data_to_postgres.sh  clear.sh  full_run.sh  init.sh  simulate_data_ingestion.sh
scripts/clickhouse/: clear_db.py  init_landing_tables.py  kafka_transformation.py
scripts/kafka_streams_app/: Dockerfile  dependency-reduced-pom.xml  pom.xml
scripts/kafka_streams_app/src/main/java/com/thmanyah/: App.java
scripts/kafka_streams_app/src/test/java/com/thmanyah/: AppTest.java
scripts/postgres/: clear_db.py  init_db.py  insert_debezium_signals.py  simulate_data_ingestion.py
scripts/redis/: clear_redis.py  init_redis.py  queries.py
scripts/redpanda/: clear_debezium_connectors.py  clear_redis_connectors.py  clear_topics.py  init_postgres_connect.py  init_redis_connect.py
